--- a/ppt/index.html
+++ b/ppt/index.html
@@ -195,6 +195,9 @@ YUI().use('dd-drop', function(Y) {
 </pre>
         </div>
 
+    <div class="step" data-x="-250" data-y="2100" data-rotate="28" data-scale=".5">
+        <img src="https://raw.github.com/slowhost/upload/1355907537489/200803201811078660.jpg" width="800">
+    </div>
 
     <div class="step" data-x="-250" data-y="2100" data-rotate="28" data-scale="2">
         <a href="http://wiki.commonjs.org/wiki/Modules/1.1">CommonJS</a>
